--- a/Changes
+++ b/Changes
@@ -1,2 +1,7 @@
+Wed Aug 18 05:13:33 UTC 2004  chromatic
+	- bugfix release 0.20
+	- improved tests
+	- revised method of calling so it actually works (thanks to Greg Lepore)
+
 Fri Dec 26 20:30:31 UTC 2003  chromatic
 	- initial release 0.10
