--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+Fri Dec 24 20:24:07 UTC 2004  chromatic
+	- actually release 0.22
+	- sign the distribution
+	- clean up Build.PL slightly
+
+Thu Nov 18 06:28:39 UTC 2004  chromatic
+	- one more test tweak for Windows users (thanks to rrwo)
+
 Wed Aug 18 17:25:01 UTC 2004  chromatic
 	- fix a test bug for Windows users
 	- add back in test plan in t/base.t
