--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 Pod::ToDemo
 -----------
 
+0.22 - Fri Dec 24 20:23:08 UTC 2004
 0.21 - Wed Aug 18 17:30:00 UTC 2004
 0.10 - Fri Dec 26 20:25:09 UTC 2003
 
