--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+Sat Jul  9 00:22:17 UTC 2005  chromatic
+	- bumped up version number to 1.00
+	- added POD and POD coverage tests
+	- create traditional Makefile.PL from Build.PL
+	- improved POD
+
 Fri Dec 24 20:24:07 UTC 2004  chromatic
 	- actually release 0.22
 	- sign the distribution
