--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 Pod::ToDemo
 -----------
 
+1.00 - Sat Jul  9 00:34:21 UTC 2005
 0.22 - Fri Dec 24 20:23:08 UTC 2004
 0.21 - Wed Aug 18 17:30:00 UTC 2004
 0.10 - Fri Dec 26 20:25:09 UTC 2003
@@ -33,3 +34,9 @@ USAGE
 
 See the documentation, which really ought to write itself to a demo file.
 Patches welcome!
+
+COPYRIGHT
+---------
+
+Copyright (c) 2003 - 2005, chromatic.  All rights reserved.  You may use,
+modify, and distribute this module under the same terms as Perl 5.8.x.
