--- a/README
+++ b/README
@@ -1,12 +1,6 @@
 Pod::ToDemo
 -----------
 
-1.01 - Sat Nov 19 06:14:22 UTC 2005
-1.00 - Sat Jul  9 00:34:21 UTC 2005
-0.22 - Fri Dec 24 20:23:08 UTC 2004
-0.21 - Wed Aug 18 17:30:00 UTC 2004
-0.10 - Fri Dec 26 20:25:09 UTC 2003
-
 Pod::ToDemo allows pure-POD tutorials to write demonstration programs when
 invoked directly from the command line.  This is an easy way to provide
 working, tweakable programs for people who've just read a tutorial.
@@ -15,29 +9,5 @@ For example, SDL::Tutorial, the bare-bones Perl SDL tutorial, will write a demo 
 
   $ perl -MSDL::Tutorial=sdl_demo.pl -e 1
 
-INSTALLATION
-------------
-
-Use Module::Build 0.18 or newer.  A backwards-compatible Makefile.PL can
-install this for you, if you so desire.
-
-  $ perl Build.PL
-  $ ./Build
-  $ ./Build test
-  $ ./Build install
-
-If you'd rather install by hand, install also Test::Simple 0.47 or newer and
-Test::Exception.  These are only necessary to run the tests, though they're
-good modules and you really ought to have them anyway.
-
-USAGE
------
-
-See the documentation, which really ought to write itself to a demo file.
-Patches welcome!
-
-COPYRIGHT
----------
-
-Copyright (c) 2003 - 2005, chromatic.  All rights reserved.  You may use,
-modify, and distribute this module under the same terms as Perl 5.8.x.
+Copyright (c) 2003 - 2011, chromatic.  All rights reserved.  You may use,
+modify, and distribute this module under the same terms as Perl 5.12.
