--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Changes for Pod::ToDemo
 
 {{$NEXT}}
+    - fixed Git links in metadata
 
 1.20110613 2011-06-12 20:22:51 America/Los_Angeles
     - ported to Dist::Zilla
